--- a/_sass/parts/_post-page.scss
+++ b/_sass/parts/_post-page.scss
@@ -77,10 +77,8 @@
     position: relative;
 
     img.page-image {
-      width: 100%;
+      max-width: 100%;
       height: auto;
-      display: block;
-      object-fit: cover;
     }
   }
 }
